# synth-inference

./: README.md  pyproject.toml
R-package/: .Rapp.history
examples/: california_plot_example.py
synthdid_py/: __init__.py  plot.py  solver.py  synthdid.py  utils.py  vcov.py
tests/: debug_r_package.py  inspect_data.R  run_fw_test_r.R  run_synthdid.R  run_weights_calc.R  test_basic.py  test_california.py  test_comparison.py  test_component_matching.py  test_fw_update.py  test_plot.py  test_r_interface.py  test_sparsify_comparison.py  test_synthdid.R
