[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthdid_py"
version = "0.1.0"
description = "Python implementation of the Synthetic Difference-in-Differences method"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "rpy2>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.poetry]
package-mode = false
packages = [
    {include = "synthdid_py"}
]
